# KeyValueDB

./: .gitignore  Cargo.toml  README.md  kv_store.db
examples/: backup_restore.rs  basic_operations.rs  expiration_handling.rs  periodic_compaction.rs  snapshot_writing.rs
src/: lib.rs  main.rs
src/keystoredb/: keystore.rs  kvpair.rs  mod.rs
